[package]
name = "guv"
version = "0.1.1"
authors = ["Jesse C. Grillo <jgrillo@protonmail.com>"]
description = "A PID Controller"
license = "Apache-2.0"
repository = "https://github.com/jgrillo/guv"
readme = "README.md"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = []

[dependencies]
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
plotters = "0.3"
proptest = "1.0"
